Insert Web Hotel in hotels page

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -57,14 +57,10 @@
             <h1>Saiba onde ficar em Salvador</h1>
 
             <h2><a href="http://www.matizsalvador.com.br/">Hotel Matiz</a></h2>
-            <img src="assets/images/matiz-logo.jpg" class="thumb"/>
-            <p>Situado a 4 km do Shopping Iguatemi de Salvador, o Hotel Matiz dispõe de uma piscina ao ar livre, academia, acesso gratuito à internet sem fio (Wi-Fi) e acomodações climatizadas em 2 edifícios modernos. Além disso, o o restaurante da casa serve café-da-manhã.
-            </p>
-            <p>
-            O Hotel Matiz Salvador fica a 15 km do Aeroporto Internacional Deputado Luís Eduardo Magalhães (Dois de Julho), e a 2 km do Centro de Convenções da Bahia. Já o centro histórico de Salvador, o Pelourinho, está a 13 km de distância. O hotel conta com estacionamento privativo, disponível por um custo extra.
-            </p>
-            <p>
-            Todas as acomodações possuem frigobar, mesa de trabalho e TV LCD via satélite, assim como banheiro privativo e amenidades de banho. O hotel também oferece serviço de quarto e comodidades para hóspedes com mobilidade reduzida.
+            <a href="http://www.matizsalvador.com.br/"><img src="assets/images/matiz-logo.jpg" class="thumb"/></a>
+            <p>Situado a 4 km do Shopping Iguatemi de Salvador, o Hotel Matiz dispõe de uma piscina ao ar livre, academia, acesso gratuito à internet sem fio (Wi-Fi) e acomodações climatizadas em 2 edifícios modernos. Além disso, o o restaurante da casa serve café-da-manhã.</p>
+            <p>O Hotel Matiz Salvador fica a 15 km do Aeroporto Internacional Deputado Luís Eduardo Magalhães (Dois de Julho), e a 2 km do Centro de Convenções da Bahia. Já o centro histórico de Salvador, o Pelourinho, está a 13 km de distância. O hotel conta com estacionamento privativo, disponível por um custo extra.</p>
+            <p>Todas as acomodações possuem frigobar, mesa de trabalho e TV LCD via satélite, assim como banheiro privativo e amenidades de banho. O hotel também oferece serviço de quarto e comodidades para hóspedes com mobilidade reduzida.
             <br />
             (<em><a href="http://www.booking.com/hotel/br/matiz-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
             </p>
@@ -82,6 +78,29 @@
             Website: <a href="http://www.matizsalvador.com.br/">http://www.matizsalvador.com.br/</a>
             </p>
 
+            <hr />
+
+            <h2><a href="http://www.webhotel.tur.br/hoteis3.asp">Web Hotel</a></h2>
+            <a href="http://www.webhotel.tur.br/hoteis3.asp"><img src="assets/images/webhotel-logo.png" class="thumb"/></a>
+            <p>O Web Hotel Salvador está localizado no coração de Salvador, a 1 km do Shopping Iguatemi e em frente a estação rodoviária da cidade. Oferece uma loja de conveniência no saguão e estacionamento gratuito.</p>
+            <p>O hotel fica a 500 metros da Avenida Tancredo Neves, no centro financeiro da cidade, próximo ao Centro de Convenções da Bahia e do Shopping Center Salvador. Está situado a poucos passos de supermercados, restaurantes e pontos de ônibus e táxis. O Aeroporto Luis Eduardo Magalhães está a 20 km de distância.</p>
+            <p>Todos os quartos do hotel são equipados com ar-condicionado, TV a cabo, cofre e outras comodidades. Por um custo extra, você pode conectar seu laptop à internet em seu quarto, ou usar um dos computadores do saguão.
+            <br />
+            (<em><a href="http://www.booking.com/hotel/br/web-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
+            </p>
+
+            <h4>Tarifa Especial: Apartamento Executivo apenas R$ 129,00/dia*</h4>
+            <p>Café da manhã não incluso: R$ 15,00 por pessoa e por dia. Internet grátis. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
+            <br />
+            Solicitar reservas no e-mail: reservas.salvador(at)webhotel(dot)tur(dot)br com título "Reserva Python Nordeste 2014".</em>
+            <br />
+            <small>*<em>Válido apenas para o período de 1 a 3 de maio de 2014 e de acordo com a disponibilidade do hotel.</em></small>
+            </p>
+            <h4>Informações: </h4>
+            <p>Rua da Alfazema, 752 (<a href="https://goo.gl/maps/Qbwyq" target="_blank">ver no mapa</a>)<br />
+            Reservas: (71) 3444-0000<br />
+            Website: <a href="http://www.webhotel.tur.br/hoteis3.asp">http://www.webhotel.tur.br/hoteis3.asp</a>
+            </p>
       </article>
     </div>
 
