--- a/hospedagem.html
+++ b/hospedagem.html
@@ -37,15 +37,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#"><img class="logo-small" src="assets/images/logo-small.png" alt="Python Nordeste"></a>
+          <a href="index.html"><img class="logo-small" src="assets/images/logo-small.png" alt="Python Nordeste"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#evento" data-article="evento">Evento</a></li>
-            <li><a href="#palestrantes" data-article="palestrantes">Palestrantes</a></li>
-            <li><a href="http://www.eventick.com.br/python-nordeste-2014" data-article="inscricoes">Inscreva-se</a></li>
+            <li><a href="index.html#evento">Evento</a></li>
+            <li><a href="index.html#palestrantes">Palestrantes</a></li>
+            <li><a href="http://www.eventick.com.br/python-nordeste-2014">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
-            <li><a href="#patrocinadores" data-article="patrocinadores">Patrocinadores</a></li>
+            <li><a href="index.html#patrocinadores">Patrocinadores</a></li>
             <li><a href="mailto:contato@pythonnordeste.org?Subject=Python%20Nordeste">Contato</a></li>
           </ul>
         </div><!--/.nav-collapse -->
