--- a/hospedagem.html
+++ b/hospedagem.html
@@ -45,6 +45,7 @@
             <li><a href="index.html#palestrantes">Palestrantes</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
+            <li><a href="hospedagem.html">Hospedagem</a></li>
             <li><a href="index.html#patrocinadores">Patrocinadores</a></li>
             <li><a href="mailto:contato@pythonnordeste.org?Subject=Python%20Nordeste">Contato</a></li>
           </ul>
