--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><a href="#palestrantes" data-article="palestrantes">Palestrantes</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014" data-article="inscricoes">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
+            <li><a href="hospedagem.html">Hospedagem</a></li>
             <li><a href="#patrocinadores" data-article="patrocinadores">Patrocinadores</a></li>
             <li><a href="mailto:contato@pythonnordeste.org?Subject=Python%20Nordeste">Contato</a></li>
           </ul>
