Add Tulip Inn Hotel

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -82,6 +82,28 @@
 
             <div class="clearfix"></div>
 
+            <div class="cover tulipinn">Tulip Inn Centro de Convenções</div>
+            <p>Este hotel 4 estrelas em Salvador, está localizado bem em frente ao Centro de Convenções da Bahia e apenas a 2 km do Salvador Shopping e oferece uma academia e quartos com Wi-Fi e ar-condicionado. Os quartos do Tulip Inn Centro de Convenções apresentam TV a cabo, mesa de trabalho e frigobar. Alguns contam com uma área de estar espaçosa.
+            <br />
+            (<em>Adaptado de <a href="http://www.booking.com/hotel/br/holiday-inn-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
+            </p>
+
+            <h4>Tarifa Especial: Apartamento Single R$ 170,00/dia* e Double R$ 190,00/dia*</h4>
+            <p>Inclui Café da manhã, Internet Wifi e 1 vaga de estacionamento. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
+            <br />
+            Solicitar reservas no e-mail: ticcreservas(at)goldentulip(dot)com(dot)br com título "Reserva Python Nordeste 2014".</em>
+            <br />
+            <small>*<em>Adicionar 5% de ISS. Válido apenas para o período de 1 a 3 de maio de 2014 e de acordo com a disponibilidade do hotel.</em></small>
+            </p>
+            <a href="http://www.tulipinncentrodeconvencoes.com/"><img src="assets/images/tulipinn-logo.jpg" class="thumb"/></a>
+            <h4>Informações: </h4>
+            <p>Rua Doutor Augusto Lopes Pontes 1207 (<a href="https://goo.gl/maps/NTx10" target="_blank">ver no mapa</a>)<br />
+            Reservas: (71) 4009-4488<br />
+            Website: <a href="http://www.tulipinncentrodeconvencoes.com/">http://www.tulipinncentrodeconvencoes.com/</a>
+            </p>
+
+            <div class="clearfix"></div>
+
             <div class="cover webhotel">Web Hotel</div>
             <p>O Web Hotel Salvador está localizado no coração de Salvador, a 1 km do Shopping Iguatemi e em frente a estação rodoviária da cidade. Oferece uma loja de conveniência no saguão e estacionamento gratuito.</p>
             <p>O hotel fica a 500 metros da Avenida Tancredo Neves, no centro financeiro da cidade, próximo ao Centro de Convenções da Bahia e do Shopping Center Salvador. Está situado a poucos passos de supermercados, restaurantes e pontos de ônibus e táxis. O Aeroporto Luis Eduardo Magalhães está a 20 km de distância.</p>
