Remove Booking.com link

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -63,7 +63,7 @@
             <p>O Hotel Matiz Salvador fica a 15 km do Aeroporto Internacional Deputado Luís Eduardo Magalhães (Dois de Julho), e a 2 km do Centro de Convenções da Bahia. Já o centro histórico de Salvador, o Pelourinho, está a 13 km de distância. O hotel conta com estacionamento privativo, disponível por um custo extra.</p>
             <p>Todas as acomodações possuem frigobar, mesa de trabalho e TV LCD via satélite, assim como banheiro privativo e amenidades de banho. O hotel também oferece serviço de quarto e comodidades para hóspedes com mobilidade reduzida.
             <br />
-            (<em><a href="http://www.booking.com/hotel/br/matiz-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
+            (<em>Booking.com</em>)
             </p>
 
             <h4>Tarifa Especial: Apartamento Executivo apenas R$ 189,00/dia*</h4>
@@ -85,7 +85,7 @@
             <div class="cover tulipinn">Tulip Inn Centro de Convenções</div>
             <p>Este hotel 4 estrelas em Salvador, está localizado bem em frente ao Centro de Convenções da Bahia e apenas a 2 km do Salvador Shopping e oferece uma academia e quartos com Wi-Fi e ar-condicionado. Os quartos do Tulip Inn Centro de Convenções apresentam TV a cabo, mesa de trabalho e frigobar. Alguns contam com uma área de estar espaçosa.
             <br />
-            (<em>Adaptado de <a href="http://www.booking.com/hotel/br/holiday-inn-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
+            (<em>Adaptado de Booking.com</em>)
             </p>
 
             <h4>Tarifa Especial: Apartamento Single R$ 170,00/dia* e Double R$ 190,00/dia*</h4>
@@ -109,7 +109,7 @@
             <p>O hotel fica a 500 metros da Avenida Tancredo Neves, no centro financeiro da cidade, próximo ao Centro de Convenções da Bahia e do Shopping Center Salvador. Está situado a poucos passos de supermercados, restaurantes e pontos de ônibus e táxis. O Aeroporto Luis Eduardo Magalhães está a 20 km de distância.</p>
             <p>Todos os quartos do hotel são equipados com ar-condicionado, TV a cabo, cofre e outras comodidades. Por um custo extra, você pode conectar seu laptop à internet em seu quarto, ou usar um dos computadores do saguão.
             <br />
-            (<em><a href="http://www.booking.com/hotel/br/web-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
+            (<em>Booking.com</em>)
             </p>
 
             <h4>Tarifa Especial: Apartamento Executivo apenas R$ 129,00/dia*</h4>
