Add Mercure Boulevard hotel

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -59,7 +59,7 @@
             <hr />
             <br />
             <div class="cover matiz">Hotel Matiz</div>
-            <p>Situado a 4 km do Shopping Iguatemi de Salvador, o Hotel Matiz dispõe de uma piscina ao ar livre, academia, acesso gratuito à internet sem fio (Wi-Fi) e acomodações climatizadas em 2 edifícios modernos. Além disso, o o restaurante da casa serve café-da-manhã.</p>
+            <p>Situado a 4 km do Shopping Iguatemi de Salvador, o Hotel Matiz dispõe de uma piscina ao ar livre, academia, acesso gratuito à internet sem fio (Wi-Fi) e acomodações climatizadas em 2 edifícios modernos. Além disso, o o restaurante da casa serve café da manhã.</p>
             <p>O Hotel Matiz Salvador fica a 15 km do Aeroporto Internacional Deputado Luís Eduardo Magalhães (Dois de Julho), e a 2 km do Centro de Convenções da Bahia. Já o centro histórico de Salvador, o Pelourinho, está a 13 km de distância. O hotel conta com estacionamento privativo, disponível por um custo extra.</p>
             <p>Todas as acomodações possuem frigobar, mesa de trabalho e TV LCD via satélite, assim como banheiro privativo e amenidades de banho. O hotel também oferece serviço de quarto e comodidades para hóspedes com mobilidade reduzida.
             <br />
@@ -82,6 +82,29 @@
 
             <div class="clearfix"></div>
 
+            <div class="cover boulevard">Mercure Salvador Boulevard</div>
+            <p>Localizado no bairro Caminho das Árvores, em Salvador, este hotel oferece piscina coberta, academia e acesso Wi-Fi gratuito. O restaurante do hotel serve buffet de café da manhã e oferece serviço de quarto, ambos mediante custo adicional. Há estacionamento disponível no local, também mediante custo adicional.</p>
+            <p>Todas as acomodações possuem TV a cabo, frigobar, cofre e ar-condicionado. A decoração é contemporânea e as unidades têm banheiro privativo. Serviços de lavanderia estão disponíveis.</p>
+            <p>O Mercure Salvador Boulevard fica a 3 km do centro comercial de Salvador e a 2 km da Estação Rodoviária. O Aeroporto internacional Luis Eduardo Magalhães está a 18 km do hotel e o Estádio Fonte Nova está a 8 km.
+            <br />
+            (<em>Booking.com</em>)
+            </p>
+            <h4>Tarifa Especial: Quarto Classic (double) R$ 179,00/dia*</h4>
+            <p>Inclui café da manhã. O pagamento deve ser feito diretamente no hotel, no momento do check-in e é obrigatória a apresentação de comprovante de participação no evento.
+            <br />
+            Solicitar reservas no e-mail: h7361-sb@accor(dot)com(dot)br com título "Reserva Python Nordeste 2014".</em>
+            <br />
+            <small>*<em>Adicionar 5% de ISS. Válido apenas para o período de 1 a 3 de maio de 2014 e de acordo com a disponibilidade do hotel.</em></small>
+            </p>
+            <a href="http://www.accorhotels.com/pt-br/hotel-7361-mercure-salvador-boulevard/index.shtml"><img src="assets/images/mercure-logo.png" class="thumb"/></a>
+            <h4>Informações: </h4>
+            <p>Rua Ewerton Visco, 160 (<a href="https://goo.gl/maps/LoJIj" target="_blank">ver no mapa</a>)<br />
+            Reservas: (71) 2201-2978<br />
+            Website: <a href="http://www.accorhotels.com/pt-br/hotel-7361-mercure-salvador-boulevard/index.shtml">http://www.accorhotels.com/</a>
+            </p>
+
+            <div class="clearfix"></div>
+
             <div class="cover tulipinn">Tulip Inn Centro de Convenções</div>
             <p>Este hotel 4 estrelas em Salvador, está localizado bem em frente ao Centro de Convenções da Bahia e apenas a 2 km do Salvador Shopping e oferece uma academia e quartos com Wi-Fi e ar-condicionado. Os quartos do Tulip Inn Centro de Convenções apresentam TV a cabo, mesa de trabalho e frigobar. Alguns contam com uma área de estar espaçosa.
             <br />
@@ -89,7 +112,7 @@
             </p>
 
             <h4>Tarifa Especial: Apartamento Single R$ 170,00/dia* e Double R$ 190,00/dia*</h4>
-            <p>Inclui Café da manhã, Internet Wifi e 1 vaga de estacionamento. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
+            <p>Inclui café da manhã, Internet Wifi e 1 vaga de estacionamento. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
             <br />
             Solicitar reservas no e-mail: ticcreservas(at)goldentulip(dot)com(dot)br com título "Reserva Python Nordeste 2014".</em>
             <br />
