Update Tulip Inn price

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -106,13 +106,11 @@
             <div class="clearfix"></div>
 
             <div class="cover tulipinn">Tulip Inn Centro de Convenções</div>
-            <p>Este hotel 4 estrelas em Salvador, está localizado bem em frente ao Centro de Convenções da Bahia e apenas a 2 km do Salvador Shopping e oferece uma academia e quartos com Wi-Fi e ar-condicionado. Os quartos do Tulip Inn Centro de Convenções apresentam TV a cabo, mesa de trabalho e frigobar. Alguns contam com uma área de estar espaçosa.
-            <br />
-            (<em>Adaptado de Booking.com</em>)
-            </p>
+            <p>O Tulip Inn Centro de Convenções está estrategicamente localizado em frente ao Centro de Convenções da Bahia. O Hotel fica próximo a 2 shopping centers, apenas a 2 km do Salvador Shopping. Fica a 19 km do Aeroporto Internacional e a 10 minutos de carro do centro da cidade.</p>
+            <p>O hotel também oferece um ótimo serviço de restaurante, bar, room service 24 horas, lavanderia, business center e uma academia. Os quartos apresentam TV a cabo, mesa de trabalho, frigobar, ar-condicionado e internet wifi no apartamento.</p>
 
-            <h4>Tarifa Especial: Apartamento Single R$ 170,00/dia* e Double R$ 190,00/dia*</h4>
-            <p>Inclui café da manhã, Internet Wifi e 1 vaga de estacionamento. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
+            <h4>Tarifa Especial: Apartamento Single R$ 165,00/dia* e Double R$ 185,00/dia*</h4>
+            <p>Inclui Café da manhã, Internet Wifi e 1 vaga de estacionamento. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
             <br />
             Solicitar reservas no e-mail: ticcreservas(at)goldentulip(dot)com(dot)br com título "Reserva Python Nordeste 2014".</em>
             <br />
