Add cover to `Python para Zumbis` minicourse

--- a/index.html
+++ b/index.html
@@ -157,6 +157,32 @@
       </article>
     </div>
 
+    <div id="pyzumbi" class="full-bg pyzumbi-wrap">
+      <div class="pyzumbi-bg">
+        <article class="container pyzumbi">
+          <div class="col-lg-12">
+            <div class="row">
+              <h2>Minicurso</h2>
+              <div class="minicourse-content">
+                <div class="minicourse-about">
+                  <p class="learn-it">Aprenda a programar de um modo profissional e divertido.</p>
+                  <p class="minicourse-date">01 de Maio</p>
+                </div>
+                <div class="minicourse-video">
+                  <iframe width="560" height="315" src="//www.youtube.com/embed/ioya7nGct-o?rel=0" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="minicourse-info">
+                  <p class="minicourse-speaker">Fernando Masanori</p>
+                  <p>Professor FATEC-SP</p>
+                  <p>Docente da FATEC São José dos Campos, adora dar aulas, graduado em Computação pelo IME-USP, mestrado pelo ITA. Desenvolveu projetos para a Cobra Tecnologia, Credicard Mastercard, PriceWaterhouse & Coopers e Itaú BankBoston. Interesses: Python, NoSQL, Pentaho, Google Technology, Facebook.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+
     <div id="patrocinadores" class="full-bg sponsors-wrap">
       <article class="container patrocinadores">
         <div class="row centered">
