Add Notatec as sponsor

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -180,6 +180,9 @@
             <div class="col-lg-3 sponsor-logo">
               <a href="http://www.eventick.com.br/" target="_blank"><img src="assets/images/eventick.png" alt="Eventick" width="150"></a>
             </div>
+            <div class="col-lg-3 sponsor-logo">
+              <a href="http://www.novatec.com.br/" target="_blank"><img src="assets/images/novatec.jpg" alt="Novatec" width="150"></a>
+            </div>
           </div>
         </div>
       </article><!-- /container -->
