--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <h2>Minicurso</h2>
               <div class="minicourse-content">
                 <div class="minicourse-about">
-                  <p class="learn-it">Aprenda a programar de um modo profissional e divertido.</p>
+                  <p class="learn-it">Aprenda a programar de um modo profissional e divertido</p>
                   <p class="minicourse-date">01 de Maio</p>
                 </div>
                 <div class="minicourse-video">
@@ -212,6 +212,9 @@
             <p class="sponsor-cat">APOIO</p>
             <div class="col-lg-3 sponsor-logo">
               <a href="http://www.eventick.com.br/" target="_blank"><img src="assets/images/eventick.png" alt="Eventick" width="150"></a>
+            </div>
+            <div class="col-lg-3 sponsor-logo">
+              <a href="http://www.novatec.com.br/" target="_blank"><img src="assets/images/novatec.jpg" alt="Novatec" width="150"></a>
             </div>
           </div>
         </div>
