Puts the minicourse date in the title

--- a/index.html
+++ b/index.html
@@ -161,11 +161,10 @@
         <article class="container pyzumbi">
           <div class="col-lg-12">
             <div class="row">
-              <h2>Minicurso</h2>
+              <h2>Minicurso - 1º de Maio</h2>
               <div class="minicourse-content">
                 <div class="minicourse-about">
                   <p class="learn-it">Aprenda a programar de um modo profissional e divertido</p>
-                  <p class="minicourse-date">01 de Maio</p>
                 </div>
                 <div class="minicourse-video">
                   <iframe width="560" height="315" src="//www.youtube.com/embed/ioya7nGct-o?rel=0" frameborder="0" allowfullscreen></iframe>
