--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><a href="#evento" data-article="evento">Evento</a></li>
             <li><a href="#palestrantes" data-article="palestrantes">Palestrantes</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014" data-article="inscricoes">Inscreva-se</a></li>
+            <li><a href="#local" data-article="local">Local</a></li>
             <li><a href="hospedagem.html">Hospedagem</a></li>
             <li><a href="#patrocinadores" data-article="patrocinadores">Patrocinadores</a></li>
             <li><a href="mailto:contato@pythonnordeste.org?Subject=Python%20Nordeste">Contato</a></li>
@@ -181,6 +182,23 @@
       </div>
     </div>
 
+    <div id="local" class="full-bg local-wrap">
+      <article class="container local">
+        <div class="col-lg-12">
+          <div class="row centered">
+            <h2>Local do evento - 2 e 3 de Maio</h2>
+          </div>
+          <div class="local-pic">
+            <p class="local-name"><strong>Casa do comércio</strong>
+            <br/>
+            <small>Avenida Tancredo Neves, 1109 - Caminho das Árvores<br> Salvador - BA, Brasil</small>
+            </p>
+          </div>
+        </div>
+      </article>
+      <div id="map-canvas" class="gmap"></div>
+    </div>
+
     <div id="patrocinadores" class="full-bg sponsors-wrap">
       <article class="container patrocinadores">
         <div class="row centered">
@@ -226,6 +244,33 @@
     </div>
 
     <script src="assets/js/pyne2014.min.js"></script>
+
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script>
+    ;(function(w, d, g, u) {
+
+      var marker, position, config, map, gMaps = g.maps;
+
+      position = new gMaps.LatLng(-12.980482, -38.456376),
+
+      config = {
+        center: position,
+        mapTypeControl: false,
+        mapTypeId: gMaps.MapTypeId.ROADMAP,
+        scrollwheel: false,
+        zoom: 16
+      };
+
+      map = new gMaps.Map(d.getElementById("map-canvas"), config);
+
+      marker = new gMaps.Marker({
+        map: map,
+        animation: gMaps.Animation.BOUNCE,
+        position: position,
+      });
+
+    }(window, document, google, undefined));
+    </script>
   </body>
 </html>
 
