Adds event schedule

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html#evento">Evento</a></li>
             <li><a href="index.html#palestrantes">Palestrantes</a></li>
+            <li><a href="index.html#programacao">Programação</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
             <li><a href="hospedagem.html">Hospedagem</a></li>
