--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#evento" data-article="evento">Evento</a></li>
             <li><a href="#palestrantes" data-article="palestrantes">Palestrantes</a></li>
+            <li><a href="#programacao" data-article="programacao">Programação</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014" data-article="inscricoes">Inscreva-se</a></li>
             <li><a href="#local" data-article="local">Local</a></li>
             <li><a href="hospedagem.html">Hospedagem</a></li>
@@ -84,7 +85,7 @@
     </div>
 
     <div id="palestrantes" class="palestrantes full-bg">
-      <article class="container">
+      <article class="container palestrantes">
 
         <div class="row centered">
           <h2>Keynotes</h2>
@@ -140,6 +141,8 @@
                 <p>JusBrasil</p>
             </figcaption>
           </figure>
+
+          <h3><a href="#programacao" data-article="programacao">Ver Programação completa</a></h3>
        </div>
       </article>
     </div>
@@ -195,6 +198,135 @@
           </div>
         </div>
         <p>Observação: os minicursos serão vendidos separadamente.</p>
+      </article>
+    </div>
+
+    <div id="programacao" class="full-bg schedule-wrap">
+      <article class="container programacao">
+        <div class="col-lg-12">
+          <div class="row">
+            <h2>Programação</h2>
+            <p><strong>1 de Maio:</strong> Minicurso Python para Zumbis - Fernando Masanori</p>
+            <table class="daily-schedule with-time table table-striped">
+              <thead>
+                <tr>
+                  <th class="schedule-time"></th>
+                  <th class="schedule-speaker">2 de Maio</th>
+                  <th class="schedule-activity"></th>
+                  <th class="schedule-speaker">3 de Maio</th>
+                  <th class="schedule-activity"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>08:00</td>
+                  <td>Credenciamento</td>
+                  <td></td>
+                  <td>Credenciamento</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>08:45</td>
+                  <td>Abertura</td>
+                  <td></td>
+                  <td class="keynote-item">Andrews Medina</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>09:00</td>
+                  <td class="keynote-item">Marcel Caraciolo</td>
+                  <td class="keynote-item"></td>
+                  <td>Vicente Alencar</td>
+                  <td>PyCan - Pode isso Arnaldo?</td>
+                </tr>
+                <tr>
+                  <td>10:00</td>
+                  <td>Fernando Masanori</td>
+                  <td>O Guia do Mochileiro Python</td>
+                  <td>Davidson Fellipe </td>
+                  <td>Guia prático de Desenvolvimento Front-end para Django Devs</td>
+                </tr>
+                <tr>
+                  <td>10:30</td>
+                  <td>Coffee Break</td>
+                  <td></td>
+                  <td>Coffee Break</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>11:00</td>
+                  <td>Renato Oliveira</td>
+                  <td>Refactoring Django Applications</td>
+                  <td>Glauber Brennon</td>
+                  <td>Python e a Internet das Coisas</td>
+                </tr>
+                <tr>
+                  <td>11:30</td>
+                  <td>Danilo J. S. Bellini</td>
+                  <td>AudioLazy Band Show</td>
+                  <td>Daniel Pimentel </td>
+                  <td>Python/Easter Eggs</td>
+                </tr>
+                <tr>
+                  <td>12:00</td>
+                  <td>Almoço</td>
+                  <td></td>
+                  <td>Almoço</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>14:00</td>
+                  <td class="keynote-item">David Cramer</td>
+                  <td class="keynote-item"></td>
+                  <td class="keynote-item">Osvaldo Matos</td>
+                  <td class="keynote-item"></td>
+                </tr>
+                <tr>
+                  <td>15:00</td>
+                  <td>Gabriel Jordão</td>
+                  <td>É ver pra crer: trazendo à tona a informação pública brasileira</td>
+                  <td>Guto Maia</td>
+                  <td>pyNES: Python programming for Nintendo 8 bits.</td>
+                </tr>
+                <tr>
+                  <td>15:30</td>
+                  <td>Renzo Nuccitelli </td>
+                  <td>Python e AngularJS: aplicações dinâmicas zen</td>
+                  <td>Rodrigo Senra</td>
+                  <td>Brainiak - Uma API Restful-Hipermídia para Triplestores</td>
+                </tr>
+                <tr>
+                  <td>16:00</td>
+                  <td>Coffee Break</td>
+                  <td></td>
+                  <td>Coffee Break</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>16:30</td>
+                  <td>Matt Robenolt</td>
+                  <td></td>
+                  <td>Rafael Martins</td>
+                  <td>Bastidores da API de esportes da Globo.com: 4 milhões de reqs/dia com Python/Tornado, Redis e Nginx</td>
+                </tr>
+                <tr>
+                  <td>17:00</td>
+                  <td>Eduardo Alves </td>
+                  <td>Construindo scripts para testes de segurança com Python</td>
+                  <td>Lighting Talks</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>17:30</td>
+                  <td>Encerramento</td>
+                  <td></td>
+                  <td>Encerramento</td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </article>
     </div>
 
