--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
         <div class="col-lg-12">
           <div class="row">
             <h2>Programação</h2>
-            <p><strong>1 de Maio:</strong> Minicurso Python para Zumbis - Fernando Masanori</p>
+            <p><strong>1º de Maio das 8h30 às 17h00:</strong> Minicurso Python para Zumbis* - Fernando Masanori
+            <br /><small><em>*Necessário levar notebook</em></small></p>
             <table class="daily-schedule with-time table table-striped">
               <thead>
                 <tr>
