Changed event location

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
             <h2>Local do evento - 2 e 3 de Maio</h2>
           </div>
           <div class="local-pic">
-            <p class="local-name"><strong>Casa do comércio</strong>
+            <p class="local-name"><strong>Mundo Plaza</strong>
             <br/>
-            <small>Avenida Tancredo Neves, 1109 - Caminho das Árvores<br> Salvador - BA, Brasil</small>
+            <small>Avenida Tancredo Neves, 176-236 - Caminho das Árvores<br> Salvador - BA, Brasil</small>
             </p>
           </div>
         </div>
