Update the summary

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                   <td>09:00</td>
                   <td class="keynote-item">Marcel Caraciolo</td>
                   <td class="keynote-item"></td>
-                  <td>Vicente Alencar</td>
-                  <td>PyCan - Pode isso Arnaldo?</td>
+                  <td>Ítalo Rossi</td>
+                  <td>Console à la Cisco/Juniper em Python</td>
                 </tr>
                 <tr>
                   <td>10:00</td>
@@ -312,8 +312,8 @@
                 </tr>
                 <tr>
                   <td>17:00</td>
-                  <td>Eduardo Alves </td>
-                  <td>Construindo scripts para testes de segurança com Python</td>
+                  <td>Vicente Alencar</td>
+                  <td>PyCan - Pode isso Arnaldo?</td>
                   <td>Lighting Talks</td>
                   <td></td>
                 </tr>
