Update Gabriel's talk title

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <tr>
                   <td>15:00</td>
                   <td>Gabriel Jordão</td>
-                  <td>É ver pra crer: trazendo à tona a informação pública brasileira</td>
+                  <td>Como o JusBrasil ensinou o Python a entender Direito.</td>
                   <td>Guto Maia</td>
                   <td>pyNES: Python programming for Nintendo 8 bits.</td>
                 </tr>
