Fixes event schedule

--- a/index.html
+++ b/index.html
@@ -230,15 +230,15 @@
                   <td>08:45</td>
                   <td>Abertura</td>
                   <td></td>
-                  <td class="keynote-item">Andrews Medina</td>
+                  <td>Abertura</td>
                   <td></td>
                 </tr>
                 <tr>
                   <td>09:00</td>
                   <td class="keynote-item">Marcel Caraciolo</td>
                   <td class="keynote-item"></td>
-                  <td>Ítalo Rossi</td>
-                  <td>Console à la Cisco/Juniper em Python</td>
+                  <td class="keynote-item">Andrews Medina</td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td>10:00</td>
@@ -314,14 +314,14 @@
                   <td>17:00</td>
                   <td>Vicente Alencar</td>
                   <td>PyCan - Pode isso Arnaldo?</td>
-                  <td>Lighting Talks</td>
-                  <td></td>
+                  <td>Ítalo Rossi</td>
+                  <td>Console à la Cisco/Juniper em Python</td>
                 </tr>
                 <tr>
                   <td>17:30</td>
                   <td>Encerramento</td>
                   <td></td>
-                  <td>Encerramento</td>
+                  <td>Lighting Talks</td>
                   <td></td>
                 </tr>
               </tbody>
